--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,77 @@
     <link rel="apple-touch-icon" href="./img/logo.png">
 </head>
 <body>
+<!-- Modal Contact Voyage -->
+<div class="contact-modal" id="contactModal">
+    <div class="contact-modal-content">
+        <div class="modal-clouds">
+            <div class="cloud cloud1"></div>
+            <div class="cloud cloud2"></div>
+            <div class="cloud cloud3"></div>
+        </div>
+
+        <button class="close-modal" onclick="closeContactModal()">
+            <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+                <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>
+            </svg>
+        </button>
+
+        <div class="modal-header">
+            <div class="passport-icon">
+                <svg viewBox="0 0 24 24" width="40" height="40" fill="currentColor">
+                    <path d="M6 2C4.89 2 4 2.89 4 4V20C4 21.11 4.89 22 6 22H18C19.11 22 20 21.11 20 20V4C20 2.89 19.11 2 18 2H6M12 5C14.76 5 17 7.24 17 10C17 12.76 14.76 15 12 15C9.24 15 7 12.76 7 10C7 7.24 9.24 5 12 5M12 7C10.34 7 9 8.34 9 10C9 11.66 10.34 13 12 13C13.66 13 15 11.66 15 10C15 8.34 13.66 7 12 7M6 17H18V19H6V17Z"/>
+                </svg>
+            </div>
+            <h2>Embarquement Contact</h2>
+            <p class="modal-subtitle">Choisissez votre destination</p>
+        </div>
+
+        <div class="contact-buttons">
+            <a href="https://www.linkedin.com/in/anouk-thomas-469045348/" target="_blank" class="contact-btn linkedin">
+                <div class="btn-icon">
+                    <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
+                        <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                    </svg>
+                </div>
+                <div class="btn-content">
+                    <span class="btn-destination">LinkedIn</span>
+                    <span class="btn-info">Vol professionnel</span>
+                </div>
+                <div class="btn-arrow">✈</div>
+            </a>
+
+            <a href="mailto:anoukthms@icloud.com" class="contact-btn email">
+                <div class="btn-icon">
+                    <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
+                        <path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+                    </svg>
+                </div>
+                <div class="btn-content">
+                    <span class="btn-destination">Email</span>
+                    <span class="btn-info">Courrier express</span>
+                </div>
+                <div class="btn-arrow">✈</div>
+            </a>
+
+            <a href="tel:+33640630377" class="contact-btn phone">
+                <div class="btn-icon">
+                    <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
+                        <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
+                    </svg>
+                </div>
+                <div class="btn-content">
+                    <span class="btn-destination">Téléphone</span>
+                    <span class="btn-info">Ligne directe</span>
+                </div>
+                <div class="btn-arrow">✈</div>
+            </a>
+        </div>
+
+        <div class="boarding-pass">
+            <span>🎫 Boarding Pass • Contact Direct</span>
+        </div>
+    </div>
+</div>
 <div id="page-wrapper">
     <div class="PagePres">
         <nav class="navbar">
@@ -32,60 +103,17 @@
                 </div>
             </div>
         </nav>
+        <div class="passionContact">
+            <h1 class="passionTitle">CONATACT</h1>
+            <p class="passionSubTitle">Contact</p>
+            <p class="passiontext">VOTRE PROJET DE COMMUNICATION COMMENCE ICI : BIENVENUE À LA PORTE D'EMBARQUEMENT !</p>
 
-        <div class="contactMainContainer">
-            <div class="contactHeader">
-                <h1 class="TextLogo">CONTACT</h1>
-                <p class="subtitleProject">TRAVAILLONS ENSEMBLE SUR VOTRE PROCHAIN PROJET.</p>
-            </div>
-
-            <div class="contactGrid">
-                <a href="mailto:anoukthms@icloud.com" class="contactCard">
-                    <div class="cardIcon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 24 24">
-                            <path fill="currentColor"
-                                  d="M4 20q-.825 0-1.412-.587T2 18V6q0-.825.588-1.412T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.587 1.413T20 20zm8-7L4 8v10h16V8zm0-2l8-5H4zM4 8V6v12z"/>
-                        </svg>
-                    </div>
-                    <h2 class="infoMiniTitle">E-MAIL</h2>
-                    <p class="contactValue">anoukthms@icloud.com</p>
-                </a>
-
-                <a href="https://www.linkedin.com/in/anouk-thomas-469045348/" target="_blank" class="contactCard">
-                    <div class="cardIcon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 24 24">
-                            <path fill="currentColor"
-                                  d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2zm-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93zM6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37z"/>
-                        </svg>
-                    </div>
-                    <h2 class="infoMiniTitle">LINKEDIN</h2>
-                    <p class="contactValue">Anouk Thomas</p>
-                </a>
-
-                <a href="tel:+33640630377" target="_blank" class="contactCard">
-                    <div class="cardIcon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 16 16">
-                            <path fill="currentColor" fill-rule="evenodd"
-                                  d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42a18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z"/>
-                        </svg>
-                    </div>
-                    <h2 class="infoMiniTitle">TÉLEPHONE</h2>
-                    <p class="contactValue">06 40 63 03 77</p>
-                </a>
-
-                <div class="contactCard no-click">
-                    <div class="cardIcon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 24 24">
-                            <path fill="currentColor"
-                                  d="M12 11.5A2.5 2.5 0 0 1 9.5 9A2.5 2.5 0 0 1 12 6.5A2.5 2.5 0 0 1 14.5 9a2.5 2.5 0 0 1-2.5 2.5M12 2a7 7 0 0 0-7 7c0 5.25 7 13 7 13s7-7.75 7-13a7 7 0 0 0-7-7"/>
-                        </svg>
-                    </div>
-                    <h2 class="infoMiniTitle">LOCALISATION</h2>
-                    <p class="contactValue">Perpignan, France</p>
-                </div>
-            </div>
         </div>
-    </div>
+        <div class="Contact" onclick="openContactModal()">
+            <img src="./img/avionContact.png" alt="avion" class="ContactImg1">
+            <img src="./img/Page%20contact.png" alt="tegbdkzc">
+            <img src="./img/avion2conatct.png" alt="cdzzd" class="ContactImg2">
+        </div>
     <footer>
         <nav class="footerNavbar">
             <div class="footerLogosLeft">
@@ -109,7 +137,7 @@
             </div>
         </nav>
     </footer>
-</div>
+</div><script src="modal.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
